--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ matplotlib==2.0.2
 nltk==3.2.3
 numpy==1.12.1
 packaging==16.8
+psycopg2==2.7.1
 pyparsing==2.2.0
 python-dateutil==2.6.0
 pytz==2017.2
